<resources>
    <string name="app_name">Taschenrechner2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="eval">=</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="clear">C</string>
    <string name="plus_minus">±</string>
    <string name="euro">€</string>
    <string name="point">.</string>
    <string name="one_x">1/x</string>
    <string name="x2">x^2</string>
    <string name="sqrt">√</string>
    <string name="fak">x!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="log">log</string>
    <string name="ex">e^x</string>

    <string-array name="listFontOptions" >
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="listFontValues" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="listThemesOptions" >
        <item>Theme1</item>
        <item>Theme2</item>
    </string-array>

    <string-array name="listThemesValues" >
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
