<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25dp"
        android:id="@+id/textView1"
        android:layout_weight="1"
        android:background="#CCFFFF"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            style="@style/customButtons"
            android:text="@string/clear"
            android:id="@+id/buttonClear"
            android:layout_weight="1" />

        <Button
            style="@style/customButtons"
            android:text="@string/plus_minus"
            android:id="@+id/buttonPlusMinus"
            android:layout_weight="1" />

        <Button
            style="@style/customButtons"
            android:text="@string/euro"
            android:id="@+id/buttonEuro"
            android:layout_weight="1" />

        <Button
            style="@style/customButtons"
            android:text="@string/divide"
            android:id="@+id/buttonDivide"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            style="@style/customNumberButtons"
            android:text="@string/seven"
            android:id="@+id/button_7"
            android:layout_weight="1" />

        <Button
            style="@style/customNumberButtons"
            android:text="@string/eight"
            android:id="@+id/button_8"
            android:layout_weight="1" />

        <Button
            style="@style/customNumberButtons"
            android:text="@string/nine"
            android:id="@+id/button_9"
            android:layout_weight="1" />

        <Button
            style="@style/customButtons"
            android:text="@string/multiply"
            android:id="@+id/buttonMultiply"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            style="@style/customNumberButtons"
            android:text="@string/four"
            android:id="@+id/button_4"
            android:layout_weight="1" />

        <Button
            style="@style/customNumberButtons"
            android:text="@string/five"
            android:id="@+id/button_5"
            android:layout_weight="1" />

        <Button
            style="@style/customNumberButtons"
            android:text="@string/six"
            android:id="@+id/button_6"
            android:layout_weight="1" />

        <Button
            style="@style/customButtons"
            android:text="@string/plus"
            android:id="@+id/buttonPlus"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            style="@style/customNumberButtons"
            android:text="@string/one"
            android:id="@+id/button_1"
            android:layout_weight="1" />

        <Button
            style="@style/customNumberButtons"
            android:text="@string/two"
            android:id="@+id/button_2"
            android:layout_weight="1" />

        <Button
            style="@style/customNumberButtons"
            android:text="@string/three"
            android:id="@+id/button_3"
            android:layout_weight="1" />

        <Button
            style="@style/customButtons"
            android:text="@string/minus"
            android:id="@+id/buttonMinus"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            style="@style/customNumberButtons"
            android:text="@string/zero"
            android:id="@+id/button_0"
            android:layout_weight="2"/>

        <Button
            style="@style/customNumberButtons"
            android:text="@string/point"
            android:id="@+id/buttonPoint"
            android:layout_weight="3" />

        <Button
            style="@style/customButtons"
            android:text="@string/eval"
            android:id="@+id/buttonEval"
            android:layout_weight="3" />
    </LinearLayout>


</LinearLayout>